# truck_driver

./: .browserslistrc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  InstallBiz_2025-08-19.md  README.md  TruckDriver.postman_collection.json  docker-compose.yml  docker-compose.ynl  dotenv_.py  pyproject.toml  pytest.ini  requirements-dependencies.txt  requirements.txt  swagger  truckdriver_db.sqlite3  watcher.run.xml
.github/workflows/: main.yml
__tests__/__fixtures__/: fix.py
__tests__/tests_person/: test_user_activ_valid.py  test_user_inactive_valid.py  test_user_registrition.py  test_user_registrition_invalid.py
nginx/: .dockerignore  default.conf
person/: access_tokens.py  apps.py  binaries.py  cookies.py  hasher.py  interfaces.py  models.py  permissions.py  redis_utils.py  urls.py  urls_api.py  views.py
person/contribute/: controler_activate.py  hashers.py  sessions.py  utilite.py
person/migrations/: 0001_initial.py  0002_alter_users_options_and_more.py
person/tasks/: task_cache_hew_user.py  task_user_from_cache_to_td_repeat.py  task_user_is_authenticate.py  task_user_is_login.py
person/views_api/: binary_views.py  redis_person.py  serializers.py  users_views.py
project/: asgi.py  celery.py  celeryconfig.py  middleware.py  service.py  settings.py  urls.py  urls_api.py  views.py
project/settings_conf/: settings_db.py  settings_email.py  settings_env.py  settings_options.py  settings_security.py
static/scripts/: main-121-0b3a3b165314523dee63.js  main-332-a302b2d4b57531dc1530.js  main-57-0b3a3b165314523dee63.js  main-57-51ff6800508445292956.js  main-57-6a9570c385280784b09d.js  main-57-7d80a8e22153e4d6473e.js  (+27 more)
templates/: index.html
truckdriver/: apps.py
(+7 files in other folders)
